Removed save and content-editable from services title

--- a/MyYouthFutures/Views/Shared/Components/Services/Default.cshtml
+++ b/MyYouthFutures/Views/Shared/Components/Services/Default.cshtml
@@ -4,8 +4,8 @@
 <section class="container-fluid services">
     <div class="row">
         <div class="col-xs-12">
-            <h4 class="services-heading" ng-model="ServicesTitle" edit-callback="editMade(text, elem)" content-editable>Services</h4>
-            <p class="mont-light-light-22 about-services" ng-model="ServicesSubtitle" edit-callback="editMade(text, elem)" content-editable ng-click="ngShow=true">Our programming is divided into three main areas. Each program area has specific components to meet the needs of the youth in need.<button ng-show="showSave" class="ng-hide">Save</button></p>
+            <h4 class="services-heading" ng-model="ServicesTitle">Services</h4>
+            <p class="mont-light-light-22 about-services" ng-model="ServicesSubtitle" >Our programming is divided into three main areas. Each program area has specific components to meet the needs of the youth in need.</p>
         </div>
     </div>
 </section>
