--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -14,11 +14,13 @@
     @{ Html.RenderPartial("../Popups/_AddDonor");}
 </div>
 
+
+@model IEnumerable<MyYouthFutures.Title>
 <section class="container-fluid main-header">
     <div class="row">
         <div class="col-xs-12 header-box">
             <div class="row">
-                <p class="header-text-greeting col-xs-12">Hi</p>
+                <p class="header-text-greeting col-xs-12" asp-for="Header"></p>@*Hi</p>*@
             </div>
             <div class="sub-text-box row">
                 <p class="sub-text col-xs-12">14 WARM BEDS. YOUTH 12-17. YOUR TEMPORARY HOME <span class="quicksand-dark-38-lightgreen">:) </span></p>
