--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -15,12 +15,12 @@
 </div>
 
 
-@model IEnumerable<MyYouthFutures.Title>
+@*@model IEnumerable<MyYouthFutures.Title>*@
 <section class="container-fluid main-header">
     <div class="row">
         <div class="col-xs-12 header-box">
             <div class="row">
-                <p class="header-text-greeting col-xs-12" asp-for="Header"></p>@*Hi</p>*@
+                <p class="header-text-greeting col-xs-12" asp-for="Header">Hi</p>@*Hi</p>*@
             </div>
             <div class="sub-text-box row">
                 <p class="sub-text col-xs-12">14 WARM BEDS. YOUTH 12-17. YOUR TEMPORARY HOME <span class="quicksand-dark-38-lightgreen">:) </span></p>
