--- a/MyYouthFutures/Views/introArticles/Edit.cshtml
+++ b/MyYouthFutures/Views/introArticles/Edit.cshtml
@@ -1,12 +1,13 @@
 ﻿@model MyYouthFutures.Models.introArticle
 
 @{
-    ViewData["Title"] = "Edit";
+    Layout = null;
 }
+<div class="modal-header">
+    <h4 class="modal-title" id="ServicesTitleLabel">Introduction Article</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
+</div>
 
-<h2>Edit</h2>
-
-<h4>introArticle</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,8 +16,8 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="ArticleText" class="control-label"></label>
-                <input asp-for="ArticleText" class="form-control" />
-                <span asp-validation-for="ArticleText" class="text-danger"></span>
+                <textarea asp-for="ArticleText" class="form-control"></textarea>
+                <span asp-validation-for="ArticleText" class="text-danger"  rows="15" cols="60"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
