--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -108,18 +108,19 @@
     
 @* ------ First Year of Service ------ *@ 
 <div class="container">
-        <section class="row more">
-            @foreach (FirstYear_Service_Messages fsm in Model.FirstYear_Service_Messages)
-            {
-                <div class="col-xs-12 col-md-4 more_volunteer">
-                    <img src="@fsm.firstYearImage" title="Meal" alt="Meal">
-                    <p class="vol_p mont_light_18_darkgray">@fsm.firstYearText</p>
+    <section class="row more">
+        @foreach (FirstYear_Service_Messages fsm in Model.FirstYear_Service_Messages)
+        {
+            <div class="col-xs-12 col-md-4 more_volunteer">
+                <img src="@fsm.firstYearImage" title="Meal" alt="Meal">
+                <p class="vol_p mont_light_18_darkgray">@fsm.firstYearText</p>
+                <a asp-controller="FirstYear_Service_Messages" asp-action="Edit" asp-route-id="@fsm.ID" data-target="#editModal" data-toggle="modal">Edit</a>
+            </div>
 
-                </div>
-
-            }
-        </section>
-    </div>
+        }
+    </section>
+</div>
+@* ------ END First Year of Service ------ *@
     <div class="container-fluid" id="outreachBanner">
         <div class="row outreach_main_img">
             <div class="col-xs-8 text">
