--- a/MyYouthFutures/Views/FirstYear_Service_Messages/Edit.cshtml
+++ b/MyYouthFutures/Views/FirstYear_Service_Messages/Edit.cshtml
@@ -1,12 +1,13 @@
 ﻿@model MyYouthFutures.Models.FirstYear_Service_Messages
 
 @{
-    ViewData["Title"] = "Edit";
+    Layout = null;
 }
 
-<h2>Edit</h2>
-
-<h4>FirstYear_Service_Messages</h4>
+<div class="modal-header">
+    <h4 class="modal-title" id="ServicesTitleLabel">First Year Service Message</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
+</div>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -20,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="firstYearText" class="control-label"></label>
-                <input asp-for="firstYearText" class="form-control" />
+                <textarea asp-for="firstYearText" class="form-control"  rows="15" cols="60" ></textarea>
                 <span asp-validation-for="firstYearText" class="text-danger"></span>
             </div>
             <div class="form-group">
