--- a/MyYouthFutures/Views/List_Item/Edit.cshtml
+++ b/MyYouthFutures/Views/List_Item/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MyYouthFutures.Models.List_Item
 
 @{
-    ViewData["Title"] = "Edit";
+    Layout = null;
 }
 
-<h2>Edit</h2>
-
-<h4>List_Item</h4>
-<hr />
+<div class="modal-header">
+    <h4 class="modal-title" id="ServicesTitleLabel">Sites</h4>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
+</div>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
